@@ -323,10 +323,17 @@ name|highFreqBoost
 init|=
 literal|1.0f
 decl_stmt|;
-DECL|field|minNrShouldMatch
+DECL|field|lowFreqMinNrShouldMatch
 specifier|protected
 name|float
-name|minNrShouldMatch
+name|lowFreqMinNrShouldMatch
+init|=
+literal|0
+decl_stmt|;
+DECL|field|highFreqMinNrShouldMatch
+specifier|protected
+name|float
+name|highFreqMinNrShouldMatch
 init|=
 literal|0
 decl_stmt|;
@@ -624,6 +631,46 @@ name|int
 name|numOptional
 parameter_list|)
 block|{
+return|return
+name|minNrShouldMatch
+argument_list|(
+name|lowFreqMinNrShouldMatch
+argument_list|,
+name|numOptional
+argument_list|)
+return|;
+block|}
+DECL|method|calcHighFreqMinimumNumberShouldMatch
+specifier|protected
+name|int
+name|calcHighFreqMinimumNumberShouldMatch
+parameter_list|(
+name|int
+name|numOptional
+parameter_list|)
+block|{
+return|return
+name|minNrShouldMatch
+argument_list|(
+name|highFreqMinNrShouldMatch
+argument_list|,
+name|numOptional
+argument_list|)
+return|;
+block|}
+DECL|method|minNrShouldMatch
+specifier|private
+specifier|final
+name|int
+name|minNrShouldMatch
+parameter_list|(
+name|float
+name|minNrShouldMatch
+parameter_list|,
+name|int
+name|numOptional
+parameter_list|)
+block|{
 if|if
 condition|(
 name|minNrShouldMatch
@@ -862,6 +909,18 @@ operator|.
 name|size
 argument_list|()
 decl_stmt|;
+specifier|final
+name|int
+name|numHighFreqClauses
+init|=
+name|highFreq
+operator|.
+name|clauses
+argument_list|()
+operator|.
+name|size
+argument_list|()
+decl_stmt|;
 if|if
 condition|(
 name|lowFreqOccur
@@ -884,6 +943,35 @@ name|numLowFreqClauses
 argument_list|)
 decl_stmt|;
 name|lowFreq
+operator|.
+name|setMinimumNumberShouldMatch
+argument_list|(
+name|minMustMatch
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|highFreqOccur
+operator|==
+name|Occur
+operator|.
+name|SHOULD
+operator|&&
+name|numHighFreqClauses
+operator|>
+literal|0
+condition|)
+block|{
+name|int
+name|minMustMatch
+init|=
+name|calcHighFreqMinimumNumberShouldMatch
+argument_list|(
+name|numHighFreqClauses
+argument_list|)
+decl_stmt|;
+name|highFreq
 operator|.
 name|setMinimumNumberShouldMatch
 argument_list|(
@@ -1267,11 +1355,11 @@ return|return
 name|disableCoord
 return|;
 block|}
-comment|/**    * Specifies a minimum number of the optional BooleanClauses which must be    * satisfied in order to produce a match on the low frequency terms query    * part. This method accepts a float value in the range [0..1) as a fraction    * of the actual query terms in the low frequent clause or a number    *<tt>&gt;=1</tt> as an absolut number of clauses that need to match.    *     *<p>    * By default no optional clauses are necessary for a match (unless there are    * no required clauses). If this method is used, then the specified number of    * clauses is required.    *</p>    *     * @param min    *          the number of optional clauses that must match    */
-DECL|method|setMinimumNumberShouldMatch
+comment|/**    * Specifies a minimum number of the low frequent optional BooleanClauses which must be    * satisfied in order to produce a match on the low frequency terms query    * part. This method accepts a float value in the range [0..1) as a fraction    * of the actual query terms in the low frequent clause or a number    *<tt>&gt;=1</tt> as an absolut number of clauses that need to match.    *     *<p>    * By default no optional clauses are necessary for a match (unless there are    * no required clauses). If this method is used, then the specified number of    * clauses is required.    *</p>    *     * @param min    *          the number of optional clauses that must match    */
+DECL|method|setLowFreqMinimumNumberShouldMatch
 specifier|public
 name|void
-name|setMinimumNumberShouldMatch
+name|setLowFreqMinimumNumberShouldMatch
 parameter_list|(
 name|float
 name|min
@@ -1279,20 +1367,48 @@ parameter_list|)
 block|{
 name|this
 operator|.
-name|minNrShouldMatch
+name|lowFreqMinNrShouldMatch
 operator|=
 name|min
 expr_stmt|;
 block|}
-comment|/**    * Gets the minimum number of the optional BooleanClauses which must be    * satisfied.    */
-DECL|method|getMinimumNumberShouldMatch
+comment|/**    * Gets the minimum number of the optional low frequent BooleanClauses which must be    * satisfied.    */
+DECL|method|getLowFreqMinimumNumberShouldMatch
 specifier|public
 name|float
-name|getMinimumNumberShouldMatch
+name|getLowFreqMinimumNumberShouldMatch
 parameter_list|()
 block|{
 return|return
-name|minNrShouldMatch
+name|lowFreqMinNrShouldMatch
+return|;
+block|}
+comment|/**    * Specifies a minimum number of the high frequent optional BooleanClauses which must be    * satisfied in order to produce a match on the low frequency terms query    * part. This method accepts a float value in the range [0..1) as a fraction    * of the actual query terms in the low frequent clause or a number    *<tt>&gt;=1</tt> as an absolut number of clauses that need to match.    *     *<p>    * By default no optional clauses are necessary for a match (unless there are    * no required clauses). If this method is used, then the specified number of    * clauses is required.    *</p>    *     * @param min    *          the number of optional clauses that must match    */
+DECL|method|setHighFreqMinimumNumberShouldMatch
+specifier|public
+name|void
+name|setHighFreqMinimumNumberShouldMatch
+parameter_list|(
+name|float
+name|min
+parameter_list|)
+block|{
+name|this
+operator|.
+name|highFreqMinNrShouldMatch
+operator|=
+name|min
+expr_stmt|;
+block|}
+comment|/**    * Gets the minimum number of the optional high frequent BooleanClauses which must be    * satisfied.    */
+DECL|method|getHighFreqMinimumNumberShouldMatch
+specifier|public
+name|float
+name|getHighFreqMinimumNumberShouldMatch
+parameter_list|()
+block|{
+return|return
+name|highFreqMinNrShouldMatch
 return|;
 block|}
 annotation|@
@@ -1348,7 +1464,7 @@ literal|1.0
 operator|)
 operator|||
 operator|(
-name|getMinimumNumberShouldMatch
+name|getLowFreqMinimumNumberShouldMatch
 argument_list|()
 operator|>
 literal|0
@@ -1443,7 +1559,12 @@ expr_stmt|;
 block|}
 if|if
 condition|(
-name|getMinimumNumberShouldMatch
+name|getLowFreqMinimumNumberShouldMatch
+argument_list|()
+operator|>
+literal|0
+operator|||
+name|getHighFreqMinimumNumberShouldMatch
 argument_list|()
 operator|>
 literal|0
@@ -1460,8 +1581,30 @@ name|buffer
 operator|.
 name|append
 argument_list|(
-name|getMinimumNumberShouldMatch
+literal|"("
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|getLowFreqMinimumNumberShouldMatch
 argument_list|()
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+name|getHighFreqMinimumNumberShouldMatch
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|buffer
+operator|.
+name|append
+argument_list|(
+literal|")"
 argument_list|)
 expr_stmt|;
 block|}
@@ -1621,7 +1764,20 @@ name|Float
 operator|.
 name|floatToIntBits
 argument_list|(
-name|minNrShouldMatch
+name|lowFreqMinNrShouldMatch
+argument_list|)
+expr_stmt|;
+name|result
+operator|=
+name|prime
+operator|*
+name|result
+operator|+
+name|Float
+operator|.
+name|floatToIntBits
+argument_list|(
+name|highFreqMinNrShouldMatch
 argument_list|)
 expr_stmt|;
 name|result
@@ -1801,11 +1957,22 @@ literal|false
 return|;
 if|if
 condition|(
-name|minNrShouldMatch
+name|lowFreqMinNrShouldMatch
 operator|!=
 name|other
 operator|.
-name|minNrShouldMatch
+name|lowFreqMinNrShouldMatch
+condition|)
+return|return
+literal|false
+return|;
+if|if
+condition|(
+name|highFreqMinNrShouldMatch
+operator|!=
+name|other
+operator|.
+name|highFreqMinNrShouldMatch
 condition|)
 return|return
 literal|false
