@@ -42,6 +42,16 @@ name|java
 operator|.
 name|util
 operator|.
+name|Arrays
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
 name|HashSet
 import|;
 end_import
@@ -1338,6 +1348,30 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+name|left
+operator|.
+name|setHighFreqMinimumNumberShouldMatch
+argument_list|(
+name|r
+operator|.
+name|nextInt
+argument_list|(
+literal|4
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|left
+operator|.
+name|setLowFreqMinimumNumberShouldMatch
+argument_list|(
+name|r
+operator|.
+name|nextInt
+argument_list|(
+literal|4
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|r
 operator|=
 operator|new
@@ -1422,6 +1456,30 @@ argument_list|)
 argument_list|)
 expr_stmt|;
 block|}
+name|right
+operator|.
+name|setHighFreqMinimumNumberShouldMatch
+argument_list|(
+name|r
+operator|.
+name|nextInt
+argument_list|(
+literal|4
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|right
+operator|.
+name|setLowFreqMinimumNumberShouldMatch
+argument_list|(
+name|r
+operator|.
+name|nextInt
+argument_list|(
+literal|4
+argument_list|)
+argument_list|)
+expr_stmt|;
 name|QueryUtils
 operator|.
 name|checkEqual
@@ -1753,7 +1811,7 @@ argument_list|)
 expr_stmt|;
 name|query
 operator|.
-name|setMinimumNumberShouldMatch
+name|setLowFreqMinimumNumberShouldMatch
 argument_list|(
 literal|0.5f
 argument_list|)
@@ -1910,7 +1968,7 @@ argument_list|)
 expr_stmt|;
 name|query
 operator|.
-name|setMinimumNumberShouldMatch
+name|setLowFreqMinimumNumberShouldMatch
 argument_list|(
 literal|2.0f
 argument_list|)
@@ -2067,7 +2125,7 @@ argument_list|)
 expr_stmt|;
 name|query
 operator|.
-name|setMinimumNumberShouldMatch
+name|setLowFreqMinimumNumberShouldMatch
 argument_list|(
 literal|0.49f
 argument_list|)
@@ -2272,7 +2330,7 @@ argument_list|)
 expr_stmt|;
 name|query
 operator|.
-name|setMinimumNumberShouldMatch
+name|setLowFreqMinimumNumberShouldMatch
 argument_list|(
 literal|1.0f
 argument_list|)
@@ -2367,6 +2425,280 @@ operator|.
 name|get
 argument_list|(
 literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|assertTrue
+argument_list|(
+name|search
+operator|.
+name|scoreDocs
+index|[
+literal|1
+index|]
+operator|.
+name|score
+operator|>
+name|search
+operator|.
+name|scoreDocs
+index|[
+literal|2
+index|]
+operator|.
+name|score
+argument_list|)
+expr_stmt|;
+block|}
+block|{
+name|CommonTermsQuery
+name|query
+init|=
+operator|new
+name|CommonTermsQuery
+argument_list|(
+name|Occur
+operator|.
+name|SHOULD
+argument_list|,
+name|Occur
+operator|.
+name|SHOULD
+argument_list|,
+name|random
+argument_list|()
+operator|.
+name|nextBoolean
+argument_list|()
+condition|?
+literal|2.0f
+else|:
+literal|0.5f
+argument_list|)
+decl_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"is"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"this"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"end"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"world"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"universe"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"field"
+argument_list|,
+literal|"right"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|setLowFreqMinimumNumberShouldMatch
+argument_list|(
+literal|1.0f
+argument_list|)
+expr_stmt|;
+name|query
+operator|.
+name|setHighFreqMinimumNumberShouldMatch
+argument_list|(
+literal|4.0f
+argument_list|)
+expr_stmt|;
+name|TopDocs
+name|search
+init|=
+name|s
+operator|.
+name|search
+argument_list|(
+name|query
+argument_list|,
+literal|10
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|search
+operator|.
+name|totalHits
+argument_list|,
+literal|3
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+name|search
+operator|.
+name|scoreDocs
+index|[
+literal|1
+index|]
+operator|.
+name|score
+argument_list|,
+name|search
+operator|.
+name|scoreDocs
+index|[
+literal|2
+index|]
+operator|.
+name|score
+argument_list|,
+literal|0.0f
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|"0"
+argument_list|,
+name|r
+operator|.
+name|document
+argument_list|(
+name|search
+operator|.
+name|scoreDocs
+index|[
+literal|0
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
+expr_stmt|;
+comment|// doc 2 and 3 only get a score from low freq terms
+name|assertEquals
+argument_list|(
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+literal|"2"
+argument_list|,
+literal|"3"
+argument_list|)
+argument_list|)
+argument_list|,
+operator|new
+name|HashSet
+argument_list|<>
+argument_list|(
+name|Arrays
+operator|.
+name|asList
+argument_list|(
+name|r
+operator|.
+name|document
+argument_list|(
+name|search
+operator|.
+name|scoreDocs
+index|[
+literal|1
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|,
+name|r
+operator|.
+name|document
+argument_list|(
+name|search
+operator|.
+name|scoreDocs
+index|[
+literal|2
+index|]
+operator|.
+name|doc
+argument_list|)
+operator|.
+name|get
+argument_list|(
+literal|"id"
+argument_list|)
+argument_list|)
 argument_list|)
 argument_list|)
 expr_stmt|;
